Fixed all internal links.

--- a/installerEndMessageOk.html
+++ b/installerEndMessageOk.html
@@ -18,7 +18,7 @@
         <img class="imgInstaller animate__animated animate__fadeIn animate__slow featuredImage" src="web_resources/images/installer/setupCompleted.svg" alt="">
         
         <p class=" animate__animated animate__fadeIn animate__slow">Ya puedes cerrar esta pestaña.</p>
-        <p class=" animate__animated animate__fadeIn animate__slow">Para acceder a tu BlogX, introduce <b><i>miblogx.ejemplo</i>/WebBlog/home</b></p>
+        <p class=" animate__animated animate__fadeIn animate__slow">Para acceder a tu BlogX, introduce <b><i>miblogx.ejemplo</i>/BlogX/home</b></p>
 
 
         
