--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <div class="panel d-flex justify-content-center align-items-center">
       <h3 class="animate__animated animate__fadeIn animate__slow">Iniciar sesión.</h3>
       <img class="animate__animated animate__fadeIn animate__slow" src="./web_resources/images/login/login.svg" alt=""><br><br>
-      <form action="/WebBlog/login" method="post">
+      <form action="/BlogX/login" method="post">
         <label class="animate__animated animate__fadeIn animate__slow" for="user">Usuario:</label>
         <input class="inpUser animate__animated animate__fadeIn animate__slow" type="text" name="user" required><br><br>
         <label class="animate__animated animate__fadeIn animate__slow" for="user">Contraseña:</label>
